--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">Product</a>
+      <a href="./index.html">Product Logo</a>
       <nav>
         <ul>
           <li><a href="">Product</a></li>
