--- a/index.html
+++ b/index.html
@@ -18,17 +18,10 @@
         <button type="button">Sign In</button>
         <button type="button">Sign Up</button>
       </nav>
-
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
     </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Business</h1>
+        <h1>Work at the speed of thought</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
