--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
+    <title>Business Promotion</title>
   </head>
   <body>
     <header>
-      <a href="./index.html">Product Logo</a>
+      <a href="./index.html"> <img src=".images/logo.svg" /></a>
       <nav>
         <ul>
           <li><a href="">Product</a></li>
