--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
           <li><a href="">Customers</a></li>
           <li><a href="">Resources</a></li>
         </ul>
-        <button type="button">Sign In</button>
+        <ul>
+          <li><button type="button">Sign In</button></li>
         <button type="button">Sign Up</button>
       </nav>
     </header>
     <main>
       <section>
         <h1>Work at the speed of thought</h1>
-        <button type="button">Order Service</button>
+        <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+        <ul>
+          <li><button type="button">Get Started</button></li>
+          <li><button type="button">Watch the Video</button></li>
       </section>
       <section>
         <h2>Features</h2>
