fix source to logo

--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-      <a href="./index.html"> <img src=".images/logo.svg" /></a>
+      <a href="./pricing.html"> <img src="./images/logo.svg" /></a>
       <nav>
         <ul>
           <li><a href="./index.html">Product</a></li>
