--- a/customers.html
+++ b/customers.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html"> <img src=".images/logo.svg" /></a>
+      <a href="./customers.html"> <img src="./images/logo.svg" /></a>
       <nav>
         <ul>
           <li><a href="">Product</a></li>
