--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <header>
-      <a href="./index.html"> <img src=".images/logo.svg" /></a>
+      <a href="./index.html"> <img src="./images/logo.svg" /></a>
       <nav>
         <ul>
-          <li><a href="">Product</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Customers</a></li>
-          <li><a href="">Resources</a></li>
+          <li><a href="./index.html">Product</a></li>
+          <li><a href="./pricing.html">Pricing</a></li>
+          <li><a href="./customers.html">Customers</a></li>
+          <li><a href="./index.html">Resources</a></li>
         </ul>
         <ul>
           <li><button type="button">Sign In</button></li>
