--- a/index.html
+++ b/index.html
@@ -3,117 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business Promotion</title>
+    <title>Business promotion</title>
   </head>
   <body>
     <header>
-      <a href="./index.html"> <img src="./images/logo.svg" /></a>
+      <a href="./index.html">
+        <img src="./images/logo.svg" alt="Logo" width="40" height="36" />
+        Product
+      </a>
       <nav>
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricing.html">Pricing</a></li>
           <li><a href="./customers.html">Customers</a></li>
-          <li><a href="./index.html">Resources</a></li>
+          <li><a href="">Resources</a></li>
         </ul>
-        <ul>
-          <li><button type="button">Sign In</button></li>
-        <button type="button">Sign Up</button>
       </nav>
+      <ul>
+        <li><button type="button">Sign In</button></li>
+        <li><button type="button">Sign Up</button></li>
+      </ul>
     </header>
+
     <main>
       <section>
         <h1>Work at the speed of thought</h1>
-        <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+        <p>
+          Tools, tutorials, design and innovation experts, all in one place! The
+          most intuitive way to imagine your next user experience. Tools,
+          tutorials, design and innovation experts, all in one place! The most
+          intuitive way to imagine your next user experience.
+        </p>
         <ul>
-          <li><button type="button">Get Started</button></li>
+          <li><button type="button">Get started</button></li>
           <li><button type="button">Watch the Video</button></li>
-      </section>
-      <section>
-        <h2>Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
         </ul>
-      </section>
-
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/markguerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/tomford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/camilagarcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/danielwilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+        <img
+          src="./images/hero-img.svg"
+          alt="hero-img"
+          width="610"
+          height="555"
+        />
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+
+    <footer></footer>
   </body>
 </html>
