--- a/index.html
+++ b/index.html
@@ -45,6 +45,32 @@
           height="555"
         />
       </section>
+      <section>
+        <h2>Product was Built Specifically for You</h2>
+        <ul>
+          <li>
+            <img src="./images/icon-1.svg" />
+            <h3>First clisk tests</h3>
+            <p>While most people enjoy casino gambling,</p>
+          </li>
+          <li>
+            <img src="./images/icon-2.svg" />
+            <h3>Design Surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <img src="./images/icon-3.svg" />
+            <h3>Preference tests</h3>
+            <p>The Myspace page defines the individual.</p>
+          </li>
+          <li>
+            <img src="./images/icon-4.svg" />
+            <h3>Five seconds tests</h3>
+            <p>Personal choices and the overall personality of the person.</p>
+          </li>
+        </ul>
+        <button type="button">SIGN UP NOW</button>
+      </section>
     </main>
 
     <footer></footer>
