--- a/index.html
+++ b/index.html
@@ -49,27 +49,51 @@
         <h2>Product was Built Specifically for You</h2>
         <ul>
           <li>
-            <img src="./images/icon-1.svg" />
+            <img src="./images/icon-1.svg" width="54" height="54" />
             <h3>First clisk tests</h3>
             <p>While most people enjoy casino gambling,</p>
           </li>
           <li>
-            <img src="./images/icon-2.svg" />
+            <img src="./images/icon-2.svg" width="54" height="54" />
             <h3>Design Surveys</h3>
             <p>Sports betting, lottery and bingo playing for the fun</p>
           </li>
           <li>
-            <img src="./images/icon-3.svg" />
+            <img src="./images/icon-3.svg" width="54" height="54" />
             <h3>Preference tests</h3>
             <p>The Myspace page defines the individual.</p>
           </li>
           <li>
-            <img src="./images/icon-4.svg" />
+            <img src="./images/icon-4.svg" width="54" height="54" />
             <h3>Five seconds tests</h3>
             <p>Personal choices and the overall personality of the person.</p>
           </li>
         </ul>
         <button type="button">SIGN UP NOW</button>
+      </section>
+      <section>
+        <h4>Effortless validation for</h4>
+        <h2>Management</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <h4>Accessory makers</h4>
+        <p>
+          While most people enjoy casino gambling, sports betting, lottery and
+          bingo playing for the fun
+        </p>
+        <h4>Alterationists</h4>
+        <p>
+          If you are looking for a new way to promote your business that won’t
+          cost you more money,
+        </p>
+        <img
+          src="./images/management-img.svg"
+          alt="hero-img"
+          width="540"
+          height="500"
+        />
       </section>
     </main>
 
