--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
         <button type="button">SIGN UP NOW</button>
       </section>
       <section>
-        <h4>Effortless validation for</h4>
+        <h3>Effortless validation for</h3>
         <h2>Management</h2>
         <p>
           The Myspace page defines the individual, his or her characteristics,
           traits, personal choices and the overall personality of the person.
         </p>
-        <h4>Accessory makers</h4>
+        <h3>Accessory makers</h3>
         <p>
           While most people enjoy casino gambling, sports betting, lottery and
           bingo playing for the fun
         </p>
-        <h4>Alterationists</h4>
+        <h3>Alterationists</h3>
         <p>
           If you are looking for a new way to promote your business that won’t
           cost you more money,
@@ -94,6 +94,53 @@
           width="540"
           height="500"
         />
+      </section>
+      <section>
+        <h2>Product was Built Specifically for You</h2>
+        <ul>
+          <li>
+            <img src="./images/avatar1.png" width="98" height="98" />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <p>I can prototype your app</p>
+            <img src="./images/avatar2.png" width="98" height="98" />
+          </li>
+          <li>
+            <p>I can take care of your pitch</p>
+            <img src="./images/avatar3.png" width="98" height="98" />
+          </li>
+          <li>
+            <img src="./images/avatar4.png" width="98" height="98" />
+            <p>I can help marketing strategy</p>
+          </li>
+        </ul>
+        <button type="button">Contact our expert</button>
+      </section>
+      <section>
+        <h2>Content Strategies</h2>
+        <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img src="./images/image1.png" width="350" height="185" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li></li>
+          <li>
+            <img src="./images/image2.png" width="350" height="185" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img src="./images/image3.png" width="350" height="185" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+        </ul>
       </section>
     </main>
 
