--- a/resources.html
+++ b/resources.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Promotion - Pricing</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Business Promotion - Resources</title>
+  </head>
+  <body>
     <header>
-      <a href="./pricing.html"> <img src="./images/logo.svg" /></a>
+      <a href="./resources.html"> <img src="./images/logo.svg" /></a>
       <nav>
         <ul>
           <li><a href="./index.html">Product</a></li>
@@ -20,5 +20,5 @@
         <button type="button">Sign Up</button>
       </nav>
     </header>
-</body>
+  </body>
 </html>
