--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricing.html">Pricing</a></li>
           <li><a href="./customers.html">Customers</a></li>
-          <li><a href="">Resources</a></li>
+          <li><a href="./resources.html">Resources</a></li>
         </ul>
       </nav>
       <ul>
