--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <li><button type="button">Sign Up</button></li>
       </ul>
     </header>
-
     <main>
       <section>
         <h1>Work at the speed of thought</h1>
@@ -90,13 +89,88 @@
         </p>
         <img
           src="./images/management-img.svg"
-          alt="hero-img"
+          alt="management-img"
           width="540"
           height="500"
         />
       </section>
       <section>
-        <h2>Product was Built Specifically for You</h2>
+        <img
+          src="./images/support-img.svg"
+          alt="collaboration-img"
+          width="540"
+          height="500"
+        />
+        <h3>Easier decision making for</h3>
+        <h2>Customer Support</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/icon_orange.svg"
+              alt="orange icon"
+              width="35"
+              height="35"
+            />
+            <p>Never worry about overpaying for your energy again.</p>
+          </li>
+          <li>
+            <img
+              src="./images/icon_red.svg"
+              alt="red icon"
+              width="35"
+              height="35"
+            />
+            <p>
+              We will only switch you to energy companies that we trust and will
+              treat you right
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/icon_blue.svg"
+              alt="blue icon"
+              width="35"
+              height="35"
+            />
+            <p>We track the markets daily and know where the savings are.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Optimization for</h3>
+        <h2>Collaborative</h2>
+        <p>
+          Few would argue that, despite the advancements of feminism over the
+          past three decades, women still face a double standard when it comes
+          to their behavior.
+        </p>
+        <h3>Accessory makers</h3>
+        <p>
+          While most people enjoy casino gambling, sports betting, lottery and
+          bingo playing for the fun
+        </p>
+        <h3>Alterationists</h3>
+        <p>
+          If you are looking for a new way to promote your business that won’t
+          cost you more money,
+        </p>
+        <img
+          src="./images/collaboration-img.svg"
+          alt="collaboration-img"
+          width="540"
+          height="500"
+        />
+      </section>
+      <section>
+        <h2>Quick & Easy Process</h2>
+        <p2
+          >Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?</p2
+        >
         <ul>
           <li>
             <img src="./images/avatar1.png" width="98" height="98" />
@@ -142,8 +216,181 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Price Table</h2>
+        <p>We offer competitive price</p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <p>0 $ Per/month</p>
+            <ul>
+              <li>Only 2 Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Standard</h3>
+            <p>Brief price description</p>
+            <p>5 $ Per/month</p>
+            <ul>
+              <li>5+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Brief price description</p>
+            <p>10 $ Per/month</p>
+            <ul>
+              <li>10+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What Clients Say</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/Group 204.svg"
+              alt="4 stars out of 5"
+              width="106"
+              height="18"
+            />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/Ellipse_2_1.svg"
+              alt="customer 1"
+              width="50"
+              height="50"
+            />
+            <ul>
+              <li>Wahid Ari</li>
+              <li>Designer</li>
+            </ul>
+          </li>
+          <li>
+            <img
+              src="./images/Group 204.svg"
+              alt="4 stars out of 5"
+              width="106"
+              height="18"
+            />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/Ellipse 2_2.svg"
+              alt="customer 2"
+              width="50"
+              height="50"
+            />
+            <ul>
+              <li>Wahid Ari</li>
+              <li>Designer</li>
+            </ul>
+          </li>
+          <li>
+            <img
+              src="./images/Group 204.svg"
+              alt="4 stars out of 5"
+              width="106"
+              height="18"
+            />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img
+              src="./images/Ellipse 2_3.png"
+              alt="customer 3"
+              width="50"
+              height="50"
+            />
+            <ul>
+              <li>Wahid Ari</li>
+              <li>Designer</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Join 100 Companies who boost their business with Product</h2>
+        <button type="button">Get This</button>
+        <img src="./images/screen.svg" alt="screen" width="351" height="331" />
+      </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <a href="./index.html">
+        <img src="./images/logo.svg" alt="Logo" width="40" height="36" />
+        Product
+      </a>
+      <img
+        src="./images/instagram.svg"
+        alt="Instagram Logo"
+        width="40"
+        height="40"
+      />
+      <img
+        src="./images/facebook.svg"
+        alt="Facebook Logo"
+        width="40"
+        height="40"
+      />
+      <img
+        src="./images/twitter.svg"
+        alt="Twitter Logo"
+        width="40"
+        height="40"
+      />
+      <ul>
+        <li>
+          <h2>Resource</h2>
+          <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">FAQ</a></li>
+          </ul>
+        </li>
+        <li>
+          <h2>Legal Stuff</h2>
+          <ul>
+            <li><a href="">Disclaimer</a></li>
+            <li><a href="">Financing</a></li>
+            <li><a href="">Privacy Policy</a></li>
+          </ul>
+        </li>
+        <li>
+          <h2>knowing you're always on the best energy deal.</h2>
+          <img
+            src="./images/mobile-screen.svg"
+            alt="Mobile Screen"
+            width="18"
+            height="28"
+          />
+          <p>Enter your phone number</p>
+          <button type="button">Sign up Now</button>
+        </li>
+      </ul>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
   </body>
 </html>
