add section hero and features (incomplete)

--- a/index.html
+++ b/index.html
@@ -51,59 +51,75 @@
         </nav>
         <ul class="header-btn-list">
           <li class="header-btn-item">
-            <button class="header-btn" type="button">Sign In</button>
+            <button class="header-btn-start" type="button">Sign In</button>
           </li>
           <li class="header-btn-item">
-            <button class="header-btn" type="button">Sign Up</button>
+            <button class="header-btn-video" type="button">Sign Up</button>
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <section>
-        <h1>Work at the speed of thought</h1>
-        <p>
-          Tools, tutorials, design and innovation experts, all in one place! The
-          most intuitive way to imagine your next user experience. Tools,
-          tutorials, design and innovation experts, all in one place! The most
-          intuitive way to imagine your next user experience.
-        </p>
-        <ul>
-          <li><button type="button">Get started</button></li>
-          <li><button type="button">Watch the Video</button></li>
-        </ul>
-        <img
-          src="./images/hero-img.svg"
-          alt="hero-img"
-          width="610"
-          height="555"
-        />
+      <section class="hero">
+        <div class="container hero-container">
+          <div class="hero-text-group">
+            <h1 class="hero-title">Work at the speed of thought</h1>
+            <p class="hero-text">
+              Tools, tutorials, design and innovation experts, all in one place!
+              The most intuitive way to imagine your next user experience.
+            </p>
+            <ul class="hero-list">
+              <li class="hero-list-item">
+                <button class="hero-btn" type="button">Get started</button>
+              </li>
+              <li class="hero-list-item">
+                <button class="hero-btn" type="button">Watch the Video</button>
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/hero-img.svg"
+            alt="hero-img"
+            width="610"
+            height="555"
+          />
+        </div>
       </section>
-      <section>
-        <h2>Product was Built Specifically for You</h2>
-        <ul>
-          <li>
+      <section class="section-features">
+        <div class="container features-container"></div>
+        <h2 class="features-title">Product was Built Specifically for You</h2>
+        <ul class="features-list">
+          <li class="features-list-item">
             <img src="./images/icon-1.svg" width="54" height="54" />
-            <h3>First clisk tests</h3>
-            <p>While most people enjoy casino gambling,</p>
+            <h3 class="features-list-item-header">First clisk tests</h3>
+            <p class="features-text">
+              While most people enjoy casino gambling,
+            </p>
           </li>
-          <li>
+          <li class="features-list-item">
             <img src="./images/icon-2.svg" width="54" height="54" />
-            <h3>Design Surveys</h3>
-            <p>Sports betting, lottery and bingo playing for the fun</p>
+            <h3 class="features-list-item-header">Design Surveys</h3>
+            <p class="features-text">
+              Sports betting, lottery and bingo playing for the fun
+            </p>
           </li>
-          <li>
+          <li class="features-list-item">
             <img src="./images/icon-3.svg" width="54" height="54" />
-            <h3>Preference tests</h3>
-            <p>The Myspace page defines the individual.</p>
+            <h3 class="features-list-item-header">Preference tests</h3>
+            <p class="features-text">
+              The Myspace page defines the individual.
+            </p>
           </li>
-          <li>
+          <li class="features-list-item">
             <img src="./images/icon-4.svg" width="54" height="54" />
-            <h3>Five seconds tests</h3>
-            <p>Personal choices and the overall personality of the person.</p>
+            <h3 class="features-list-item-header">Five seconds tests</h3>
+            <p class="features-text">
+              Personal choices and the overall personality of the person.
+            </p>
           </li>
         </ul>
-        <button type="button">SIGN UP NOW</button>
+        <button class="signup-btn" type="button">SIGN UP NOW</button>
+      </div>
       </section>
       <section>
         <h3>Effortless validation for</h3>
