--- a/customers.html
+++ b/customers.html
@@ -20,30 +20,94 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./customers.html"> <img src="./images/logo.svg" /></a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="./resources.html">Resources</a></li>
+    <header class="header">
+      <div class="container header-container">
+        <a href="./index.html" class="logo">
+          <img
+            src="./images/logo.svg"
+            alt="Logo"
+            width="40"
+            height="36"
+            class="logo-img"
+          />
+          Product
+        </a>
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./index.html">Product</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./pricing.html">Pricing</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link current" href="./customers.html"
+                >Customers</a
+              >
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./resources.html">Resources</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-btn-list">
+          <li class="header-btn-item">
+            <button class="header-btn-start" type="button">Sign In</button>
+          </li>
+          <li class="header-btn-item">
+            <button class="header-btn-video" type="button">Sign Up</button>
+          </li>
         </ul>
-        <ul>
-          <li><button type="button">Sign In</button></li>
-        <button type="button">Sign Up</button>
-      </nav>
+      </div>
     </header>
     <main>
-      <section>
-        <h1>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+      <!-- #REGION HERO -->
+      <section class="clients-section">
+        <div class="container hero-container">
+          <h1 class="clients-title">Our Clients</h1>
+          <ul class="logos-list">
+            <li class="logos-list-item">
+              <a href="" target="_blank">
+                <img
+                  src="./images/Airbnb Logo-min.svg"
+                  alt="Airbnb Logo"
+                  width="159"
+                  height="50"
+                />
+              </a>
+            </li>
+            <li class="logos-list-item">
+              <a href="" target="_blank">
+                <img
+                  src="./images/Google Logo-min.svg"
+                  alt="Google Logo"
+                  width="146"
+                  height="50"
+                />
+              </a>
+            </li>
+            <li class="logos-list-item">
+              <a href="" target="_blank">
+                <img
+                  src="./images/Microsoft Logo-min.svg"
+                  alt="Microsoft Logo"
+                  width="213"
+                  height="44"
+                />
+              </a>
+            </li>
+            <li class="logos-list-item">
+              <a href="" target="_blank">
+                <img
+                  src="./images/FedEx Logo-min.svg"
+                  alt="FedEx Logo"
+                  width="140"
+                  height="42"
+                />
+              </a>
+            </li>
           </ul>
-        </h1>
+        </div>
       </section>
     </main>
   </body>
