--- a/index.html
+++ b/index.html
@@ -97,24 +97,21 @@
             </p>
           </li>
           <li class="features-list-item">
-            <div><svg><use></use></svg></div>
-            <img src="./images/icon bd2.svg" width="54" height="54" />
+            <div class="product-box"><svg width="18" height="18"><use href="./images/icons.svg#icon-wave"></use></svg></div>
             <h3 class="features-list-item-header">Design Surveys</h3>
             <p class="features-text">
               Sports betting, lottery and bingo playing for the fun
             </p>
           </li>
           <li class="features-list-item">
-            <div><svg><use></use></svg></div>
-            <img src="./images/icon bd3.svg" width="54" height="54" />
+            <div class="product-box"><svg width="18" height="18"><use href="./images/icons.svg#icon-heart"></use></svg></div>
             <h3 class="features-list-item-header">Preference tests</h3>
             <p class="features-text">
               The Myspace page defines the individual.
             </p>
           </li>
           <li class="features-list-item">
-            <div><svg><use></use></svg></div>
-            <img src="./images/icon bd4.svg" width="54" height="54" />
+            <div class="product-box"><svg width="18" height="18"><use href="./images/icons.svg#icon-cleps"></use></svg></div>
             <h3 class="features-list-item-header">Five seconds tests</h3>
             <p class="features-text">
               Personal choices and the overall personality of the person.
